# pod-protocol

./: .bunfig.toml  .env.docker  .gitignore  ADVANCED_FEATURES_IMPLEMENTATION.md  ARCHITECTURE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CRITICAL_SECURITY_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_REPORT.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION.md  E2E_TESTING.md  FAQ.md  FINAL_SDK_COMPLETION_REPORT.md  GitHub-Profile-Optimization-Guide.md  INSTALLER_README.md  MIGRATION_2025_COMPLETION_GUIDE.md  MIGRATION_COMPLETION_SUMMARY.md  MIGRATION_GUIDE.md  PROJECT_AUDIT_COMPLETE.md  PROJECT_STATUS.md  PUBLISHING.md  Prompt-or-Die-Profile-README.md  RAILWAY_DEPLOYMENT.md  README.md  RUST_SDK_COMPLETION_PLAN.md  SDK_COMPLETION_MASTER_PLAN.md  SDK_COMPLETION_SUMMARY.md  SDK_FEATURE_PARITY_SUMMARY.md  SDK_GUIDE.md  SDK_JS_COMPLETION_SUMMARY.md  SECURITY.md  SECURITY_IMPROVEMENTS_COMPLETE.md  SOLANA_V2_MIGRATION_COMPLETED.md  Start-PoDInteractive.ps1  TECHNICAL_DEBT_ANALYSIS.md  UNIFIED_CLI_INTEGRATION_PLAN.md  WEB3_V2_MIGRATION_ROLLUP_PLAN.md  (+30 more)
.cursor/memory/: activeContext.md  decisionLog.md  productContext.md  progress.md  retrospective.md
.cursor/rules/: api-standards.mdc  archetecture-patterns.mdc  architecture_patterns.md  coding_standards.md  compliance_checklist.md  documentation-guidline.mdc  forethought.mdc  performance_guidelines.md  runtime_preferences.md
.cursor/workflows/: dependency_review.md  feature_development.md  incident_response.md  release_management.md  status_check.md
.github/ISSUE_TEMPLATE/: bug_report.yml  security_report.yml
.github/workflows/: agents.yml  ci.yml  dependency-updates.yml  docs-deploy.yml  frontend-deploy.yml  publish-packages.yml  release.yml  sync-packages.yml
.memex/memory/: knowledgeOverview.md  systemPatterns.md  userFeedback.md
.memex/rules/: api_standards.md  coding-standards.mdc  coding_standards.md  compliance-checklist.mdc  documentation_guidelines.md  master-project-rule.mdc  master_cursor_user_protocol.md  master_development_protocol.md  runtime-rules.mdc  runtime_preferences.md  security_protocols.md  testing_standards.md
.memex/workflows/: deployment_process.md  duplication_prevention.md  master_setup.md  project_initialization.md  refactoring.md
api-server/: package.json  tsconfig.json
api-server/src/: index.ts
cli/: .env.example  README.md  jest.config.js  package.json
cli/docs/: zk-compression-guide.md
cli/src/: index.ts
config/development/: Anchor.toml  package.json
config/nginx/: default.conf  nginx.conf
docs/: DOCUMENTATION_QUALITY_ASSESSMENT.md  E2E_AUTO_FIXES.md  INSTALL_GUIDE.md  README.md  REPOSITORY_STRATEGY.md
docs/ai/: CLEANUP_SUMMARY.md  DEPLOYMENT.md  README.md  getting-started-stylized.md
docs/api/: COMPLETE_API_REFERENCE.md  README.md
docs/assets/: terminal.js
docs/deployment/: DEPLOYMENT_GUIDE.md  OS_SPECIFIC_DEPLOYMENT.md  README.md  WORKFLOW_CLEANUP_SUMMARY.md
docs/developer/: ONBOARDING_GUIDE.md  README.md  WORKSPACE_CONFIGURATION.md
docs/getting-started/: PLATFORM_SETUP.md  SDK_GUIDE.md  TUTORIALS.md
docs/governance/: CHANGELOG.md  ORGANIZATION_SETUP.md  PROJECT_STATUS.md  REPOSITORY_STRATEGY.md
docs/guides/: README.md  SECURITY.md
docs/user/: INSTALLER_GUIDE.md  README.md  TROUBLESHOOTING.md
docs_site/: docusaurus.config.js  package.json  sidebars-api.js  sidebars.js
docs_site/.docusaurus/: client-modules.js  registry.js  (+2 more)
examples/: README.md  advanced-trading-bot.js  content-generation-agent.js
frontend/: .npmrc  README.md  next.config.js  package.json  tailwind.config.js
governance/: CONTRIBUTING.md  GOVERNANCE.md
llm-context-library/: CLAUDE.md  DEPLOYMENT_READINESS.md  E2E_TESTING.md  GitHub-Profile-Optimization-Guide.md  KNOWLEDGE_BASE_SUMMARY.md  Pod_Protocol_Owners_Manual_and_Technical_Guide.md  README.md
mcp-server/: ENHANCED_MCP_IMPLEMENTATION_SUMMARY.md  ENHANCEMENT_ROADMAP.md  ENHANCEMENT_SUMMARY.md  MCP_OPTIMIZATION_STRATEGY.md  README.md  package.json
programs/pod-com/: Cargo.toml
programs/pod-com/src/: lib.rs
scripts/: README.md  admin.js  auto-recover-tests.js  build.js  complete-sdk-migration.cjs  deploy-railway.bat  deploy-railway.sh  deploy.js  dev-experience-enhancer.js  docker-deploy.sh  enhanced-dev-cli.js  enhanced-dev-setup.sh  final-100-percent-fix.cjs  fix-builds.js  fix-deps.js  fix-e2e-issues.cjs  fix-ports.js  fix-remaining-issues.cjs  fix-rust-config.cjs  fix-web3-migration.cjs  install-cli.sh  install-dependencies.sh  install.js  install.sh  interactive-playground.js  interactive-setup.js  onboarding-wizard.js  package-lock.json  package.json  performance-benchmark.js  pod-installer.js  publish-all.js  publish-all.sh  publish-dry-run.js  sdk-setup-wizard.js  security-audit.js  setup-complete.sh  setup-distributed-repos.sh  setup.js  smart-test-runner.cjs  (+7 more)
sdk/: README.md  migration-complete.md  package.json  rollup.config.js
sdk-js/: README.md  package.json  rollup.config.js  tsconfig.json
sdk-python/: README.md  pyproject.toml
sdk-rust/: Cargo.toml  IMPLEMENTATION_CHECKLIST.md  TECHNICAL_GUIDE.md
sdk-rust/crates/pod-sdk-core/: Cargo.toml
sdk-rust/crates/pod-sdk-core/src/: client.rs  config.rs  error.rs  lib.rs
sdk-rust/crates/pod-sdk-core/src/services/: agent.rs  analytics.rs  base.rs  channel.rs  discovery.rs  escrow.rs  ipfs.rs  message.rs  zk_compression.rs
sdk-rust/crates/pod-sdk-core/src/utils/: account.rs  compression.rs  encryption.rs  ipfs.rs  mod.rs  network.rs  zk.rs
sdk-rust/crates/pod-sdk-crypto/: Cargo.toml
sdk-rust/crates/pod-sdk-crypto/src/: lib.rs
sdk-rust/crates/pod-sdk-macros/: Cargo.toml
sdk-rust/crates/pod-sdk-macros/src/: lib.rs
sdk-rust/crates/pod-sdk-types/: Cargo.toml
sdk-rust/crates/pod-sdk-types/src/: lib.rs
sdk-rust/docs/: PERFORMANCE.md
sdk-rust/examples/basic-agent/src/: main.rs
sdk-rust/src/services/: discovery.rs  escrow.rs  message.rs
src/: index.ts
tests/: README.md  comprehensive-security.test.ts  compression-proof.test.ts  feature-parity.test.js  input-validation.test.ts  merkle-tree.test.ts  security-validation-summary.md  test-utils.ts
(+175 files in other folders)
