[workspace]
members = [
    "crates/pod-sdk-core",
    "crates/pod-sdk-types", 
    "crates/pod-sdk-crypto",
    "crates/pod-sdk-macros",
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["PoD Protocol Team <dev@pod-protocol.com>"]
license = "MIT"
repository = "https://github.com/pod-protocol/pod-protocol"
homepage = "https://pod-protocol.com"
documentation = "https://docs.rs/pod-protocol-sdk"
description = "High-performance Rust SDK for the PoD Protocol (Prompt or Die) - AI agent communication on Solana"
keywords = ["solana", "blockchain", "ai", "agents", "protocol"]
categories = ["api-bindings", "cryptography", "web-programming"]
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# Solana ecosystem
solana-sdk = "1.18"
solana-client = "1.18" 
solana-program = "1.18"
anchor-client = "0.29"
anchor-lang = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.3", features = ["derive"] }
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
blake3 = { version = "1.5", features = ["traits-preview"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"

# HTTP client and networking
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
webpki-roots = "0.25"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# URL handling
url = { version = "2.5", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Collections and utilities
indexmap = { version = "2.1", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
bytes = "1.5"
dashmap = "5.5"

# Memory management
lru = "0.12"

# IPFS integration
ipfs-api-backend-hyper = { version = "0.6", default-features = false, features = ["with-hyper-rustls"] }

# ZK compression (Light Protocol)
light-client = "1.1"
light-utils = "1.1"

# Performance and profiling
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "protobuf"], optional = true }

# Development dependencies
pretty_assertions = "1.4"
mockall = "0.12"
wiremock = "0.5"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# String processing
string-cache = "0.8"

# Configuration
config = "0.14"
toml = "0.8"

# Derive macros
derive_more = "0.99"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# Features for different use cases
[workspace.metadata.features]
default = ["native"]

# Core features
native = ["tokio/rt-multi-thread", "reqwest/native-tls"]
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures", 
    "js-sys",
    "web-sys",
    "reqwest/wasm"
]

# Optional features
profiling = ["pprof"]
compression = ["light-client", "light-utils"]
ipfs = ["ipfs-api-backend-hyper"]
metrics = ["prometheus"]
vendored-openssl = ["reqwest/native-tls-vendored"]

# Development features
testing = ["mockall", "wiremock", "pretty_assertions"]
benchmarking = ["criterion"]

[workspace.metadata.docs.rs]
features = ["native", "compression", "ipfs", "metrics"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.cargo-machete]
ignored = ["wasm-bindgen", "js-sys", "web-sys"]  # Used conditionally

[workspace.metadata.cargo-deny]
licenses = [
    "MIT",
    "Apache-2.0",
    "BSD-3-Clause",
    "ISC",
    "Unicode-DFS-2016"
] 