[workspace]
members = [
    "crates/pod-sdk-core",
    "crates/pod-sdk-types", 
    "crates/pod-sdk-crypto",
    "crates/pod-sdk-macros",
    "examples/*",
]
resolver = "2"

# Let Solana ecosystem manage cryptographic dependencies
# Do not specify ed25519-dalek or curve25519-dalek - Solana handles these

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["PoD Protocol Team <dev@pod-protocol.com>"]
license = "MIT"
repository = "https://github.com/pod-protocol/pod-protocol"
homepage = "https://pod-protocol.com"
documentation = "https://docs.rs/pod-protocol-sdk"
description = "High-performance Rust SDK for the PoD Protocol (Prompt or Die) - AI agent communication on Solana"
keywords = ["solana", "blockchain", "ai", "agents", "protocol"]
categories = ["api-bindings", "cryptography", "web-programming"]
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# Solana ecosystem - Updated for Web3.js v2.0 compatibility
solana-sdk = "1.18"
solana-client = "1.18" 
solana-program = "1.18"
solana-rpc-client = "1.18"
solana-rpc-client-api = "1.18"
solana-account-decoder = "1.18"
anchor-client = "0.30.1"
anchor-lang = "0.30.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.3", features = ["derive"] }
bincode = "1.3"

# Cryptography - Let Solana ecosystem handle ed25519 and curve25519 
# Note: ed25519-dalek and curve25519-dalek are NOT specified here
# They come from Solana dependencies which require exact versions
blake3 = { version = "1.5", features = ["traits-preview"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"

# Crypto utilities - Solana-compatible versions (zeroize < 1.4 requirement)
aes-gcm = "0.9"  # Compatible with zeroize < 1.4
chacha20poly1305 = "0.9"  # Compatible with zeroize < 1.4  
aead = "0.4"  # Compatible with older crypto stack
hkdf = "0.12"
zeroize = "1.3.0"  # Solana-compatible version

# HTTP client and networking
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
webpki-roots = "0.25"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# URL handling
url = { version = "2.5", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Collections and utilities
indexmap = { version = "2.1", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }
bytes = "1.5"
dashmap = "5.5"

# Memory management
lru = "0.12"

# System utilities
num_cpus = "1.16"

# IPFS integration
ipfs-api-backend-hyper = { version = "0.6", default-features = false, features = ["with-hyper-rustls"] }

# ZK compression (Light Protocol)
light-client = "0.13"
light-utils = "1.1"

# Performance and profiling
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "protobuf"] }

# Development dependencies
pretty_assertions = "1.4"
mockall = "0.12"
wiremock = "0.5"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# String processing
string-cache = "0.8"

# Configuration
config = "0.14"
toml = "0.8"

# Derive macros
derive_more = "0.99"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# Features for different use cases
[workspace.metadata.features]
default = ["native"]

# Core features
native = ["tokio/rt-multi-thread", "reqwest/native-tls"]
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures", 
    "js-sys",
    "web-sys",
    "reqwest/wasm"
]

# Optional features
profiling = ["pprof"]
compression = ["light-client", "light-utils"]
ipfs = ["ipfs-api-backend-hyper"]
metrics = ["prometheus"]
vendored-openssl = ["reqwest/native-tls-vendored"]

# Development features
testing = ["mockall", "wiremock", "pretty_assertions"]
benchmarking = ["criterion"]

[workspace.metadata.docs.rs]
features = ["native", "compression", "ipfs", "metrics"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.cargo-machete]
ignored = ["wasm-bindgen", "js-sys", "web-sys"]  # Used conditionally

[workspace.metadata.cargo-deny]
licenses = [
    "MIT",
    "Apache-2.0",
    "BSD-3-Clause",
    "ISC",
    "Unicode-DFS-2016"
] 