[workspace]

[package]
name = "pod-protocol-sdk"
version = "2.0.0"
edition = "2021"
authors = ["PoD Protocol Team <dev@pod-protocol.com>"]
license = "MIT"
repository = "https://github.com/pod-protocol/pod-protocol"
homepage = "https://pod-protocol.com"
documentation = "https://docs.rs/pod-protocol-sdk"
description = "Feature-complete Rust SDK for PoD Protocol - AI agent communication, P2P messaging, channels, escrow, analytics on Solana. Web3.js v2 compatible."
keywords = ["solana", "blockchain", "ai", "agents", "protocol", "web3"]
categories = ["api-bindings", "cryptography", "web-programming"]
readme = "README.md"

[lib]
name = "pod_protocol_sdk"
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Solana ecosystem - Web3.js v2.0 compatible (stable versions)
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"

# Crypto
rand = "0.8"
blake3 = { version = "1.5", features = ["traits-preview"] }
hex = "0.4"

# HTTP client (compatible with Solana's zeroize requirements)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]