[package]
name = "pod-com"
version = "0.1.0"
description = "PoD Protocol (Prompt or Die): AI Agent Communication Protocol"
edition = "2021"
rust-version = "1.79.0"

[lib]
crate-type = ["cdylib"]
name = "pod_com"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "spl-account-compression/idl-build"]
anchor-debug = []
no-log-ix-name = []

[dependencies]
# Core Solana dependencies - latest stable versions for 2025
anchor-lang = { version = "0.31.1", default-features = false, features = ["init-if-needed"] }
solana-program = { version = "2.3.0", default-features = false }

# Native Solana State Compression - the modern alternative to Light Protocol
spl-account-compression = { version = "1.0.0", features = ["cpi"], default-features = false }
spl-concurrent-merkle-tree = { version = "1.0.0", default-features = false }

# Serialization handled by Anchor internally

# Error handling
thiserror = "2.0.12"

# Secure memory handling - using custom SecureBuffer implementation

# Cryptographic operations - native Solana compatible
blake3 = { version = "1.5.5", features = ["traits-preview"] }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

# Utility
bytemuck = "1.21.0"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"

[dev-dependencies]
anchor-lang = { version = "0.31.1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = false
no-default-features = true