[package]
name = "pod-sdk-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Cryptographic utilities and secure memory management for the PoD Protocol Rust SDK"
keywords.workspace = true
categories.workspace = true

[lib]
name = "pod_sdk_crypto"
path = "src/lib.rs"

[dependencies]
# Cryptography
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }

# Symmetric encryption - Made optional
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
aead = "0.5"

# Error handling
thiserror = { workspace = true }

# Utilities
hkdf = "0.12"

[dev-dependencies]
hex = "0.4"
pretty_assertions = { workspace = true }

[features]
default = ["aes", "chacha20"]
std = []
aes = ["dep:aes-gcm"]
chacha20 = ["dep:chacha20poly1305"] 